lab3/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend-app
spec:
  type: NodePort
  selector:
    app: frontend-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
