lab3/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  tls:
  - hosts: 
    - nogorka.lab3
    secretName: mkcert
  rules:
  - host: nogorka.lab3
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 3000
